Fix backend dependencies for Java upgrade